2013-08-07  Oleg Endo <olegendo@gcc.gnu.org>

	PR other/12081
	config/rs6000/rs6000.c (gen_2arg_fn_t): Remove typedef.
	(rs6000_emit_swdiv, rs6000_emit_swrsqrt): Don't cast result of GEN_FCN
	to gen_2arg_fn_t.

2013-08-07  Eric Botcazou  <ebotcazou@adacore.com>

	* rtl.h (update_alignments): Declare.
	* final.c (grow_label_align): New function extracted from...
	(shorten_branches): ...here.  Call it.
	(update_alignments): New function.
	* reorg.c (sibling_labels): New variable.
	(get_label_before): Add SIBLING parameter.  If it is non-zero, push
	the new label along with it onto the sibling_labels vector.
	(fill_simple_delay_slots): Adjust call to get_label_before.
	(fill_slots_from_thread): Likewise.
	(relax_delay_slots): Likewise.
	(make_return_insns): Likewise.
	(dbr_schedule): Invoke update_alignment on the sibling_labels vector.

2013-08-07  Eric Botcazou  <ebotcazou@adacore.com>

	* diagnostic.c (diagnostic_classify_diagnostic): Accept zero index and
	document its semantics.
	(diagnostic_report_diagnostic): Adjust accordingly.

2013-08-07  David Malcolm  <dmalcolm@redhat.com>

	* config/sparc/sparc.c (insert_pass_work_around_errata): Move
	into...
	(sparc_option_override): ...and port to new C++ pass API.
	* config/sparc/t-sparc (sparc.o): Add dep on CONTEXT_H

2013-08-07  Peter Bergner  <bergner@vnet.ibm.com>

	* config/rs6000/rs6000.c (htm_expand_builtin) <case 0>: Remove.

2013-08-06  Caroline Tice  <cmtice@google.com>

	* gcc.c (VTABLE_VERIFICATION_SPEC): New definition.
	(LINK_COMMAND_SPEC): Add VTABLE_VERIFICATION_SPEC.
	* tree-pass.h: Add pass_vtable_verify.
	* varasm.c (assemble_variable): Add code to properly set the comdat
	section and name for the .vtable_map_vars section.
	(assemble_vtyv_preinit_initializer): New function.
	(default_sectin_type_flags):  Make sure .vtable_map_vars section has
	LINK_ONCE flag.
	* output.h: Add function decl for assemble_vtv_preinit_initializer.
	* vtable-verify.c: New file.
	* vtable-verify.h: New file.