@@ -1835,6 +1835,13 @@ const struct processor_costs *ix86_cost = &pentium_cost;
    (PPro/PENT4/NOCONA/CORE2/Athlon/K8).  */
 #define m_GENERIC (m_GENERIC32 | m_GENERIC64)
 
+const char* ix86_tune_feature_names[X86_TUNE_LAST] = {
+#undef DEF_TUNE
+#define DEF_TUNE(tune, name) name,
+#include "x86-tune.def"
+#undef DEF_TUNE
+};
+
 /* Feature tests against the various tunings.  */
 unsigned char ix86_tune_features[X86_TUNE_LAST];
 
@@ -3568,6 +3575,40 @@ ix86_option_override_internal (bool main_args_p)
   ix86_tune_mask = 1u << ix86_tune;
   for (i = 0; i < X86_TUNE_LAST; ++i)
     ix86_tune_features[i] = !!(initial_ix86_tune_features[i] & ix86_tune_mask);
+
+  if (ix86_tune_ctrl_string)
+    {
+      /* parse the tune ctrl string in the following form:
+         [^]tune_name1,[^]tune_name2,..a */
+      char *next_feature_string = NULL;
+      char *curr_feature_string = xstrdup (ix86_tune_ctrl_string);
+      char *orig = curr_feature_string;
+      do {
+        bool clear = false;
+
+        next_feature_string = strchr (curr_feature_string, ',');
+	if (next_feature_string)
+          *next_feature_string++ = '\0';
+        if (*curr_feature_string == '^')
+	  {
+	    curr_feature_string++;
+	    clear = true;
+	  }
+        for (i = 0; i < X86_TUNE_LAST; i++)
+	  {
+            if (!strcmp (curr_feature_string, ix86_tune_feature_names[i]))
+	      {
+                ix86_tune_features[i] = !clear;
+                break;
+              }
+	  }
+        if (i == X86_TUNE_LAST)
+	  warning (0, "Unknown parameter to option -mtune-ctrl: %s",
+	           clear ? curr_feature_string - 1 : curr_feature_string);
+	curr_feature_string = next_feature_string;    
+      } while (curr_feature_string);
+      free (orig);
+    }
 
 #ifndef USE_IX86_FRAME_POINTER
 #define USE_IX86_FRAME_POINTER 0
